@@ -62,6 +62,9 @@ Jobs
 
 * Added new job group db with export job to export databases offline for
   backup and version control purposes.
+
+* Added process ID to "Run jobs" and "Finished jobs" log messages for better
+  troubleshooting.
  
 Standard demo
 -------------
